# TACC-Docs

./: .gitignore  CONTRIBUTING.md  DEVELOPING.md  Dockerfile  Makefile  PUBLISHING.md  README.md  STYLEGUIDE.md  TESTING.md  docker-compose.yml  mkdocs.base.yml  mkdocs.base.yml.md  mkdocs.yml  mkdocs.yml.md  pyproject.toml  somefile
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: developer.md
.github/workflows/: build.yml
docs/: aliases.md  aliases.sh  code-examples.md  index.md  portal.md  testingextensions.md
docs/archives/: gridcommunitytoolkit.md  irods.md  tensorflow.md
docs/basics/: accounts.md  accountstatus.md  conduct.md  datatransfer.md  datatransferguide.md  faq.md  gettingstarted.md  globusdatatransfer.md  help.md  mfa.md  newuserinfo.md  software.md
docs/code-examples/: _avoided-way-pro-con.md  _deprecated-way-pro-con.md  _preferred-way-pro-con.md  index.md  newdatatransfer.md  sdl.md  temp-datatransfer.md
docs/css/: core-styles.css  tacc-docs.css  tup-cms.css
docs/hpc/: configurestrings.sh  corral.md  frontera.md  hpclanding.md  lonestar6.md  makefile  maverick2.md  ranch.md  stallion.md  stampede2.md  stampede3.md  vista.md
docs/hpcugs/: configurestrings.sh  corral.md  index.md  makefile
docs/include/: conductsrc.md  configurestrings.sh  corraltip.md  crontabs.md  crontabsrc.md  frontera-crontab.md  frontera-help.md  frontera-jobaccounting.md  frontera-mkl.md  help.md  helpsrc.md  jobaccounting.md  jobaccountingsrc.md  lonestar6-conduct.md  lonestar6-crontab.md  lonestar6-help.md  lonestar6-jobaccounting.md  lonestar6-mkl.md  makefile  maverick2-help.md  maverick2-jobaccounting.md  mkl.md  mklsrc.md  ranch-help.md  sanitytool.md  scratchpolicy.md  spacetip.md  stampede2-conduct.md  stampede2-help.md  stampede2-jobaccounting.md  stampede2-mkl.md  stampede3-crontab.md  stampede3-help.md  stampede3-jobaccounting.md  suchargenotice.md  taccinfo.md  taccinfosrc.md  tacctips.md  tinfo.md  vista-crontab.md  (+2 more)
docs/index-sample/: sample-1.md  sample-2.md
docs/js/: addPageId.js  autoScrollNav.js
docs/pdfs/: CyberduckProfile.cyberduckprofile
docs/software/: abaqus.md  alphafold.md  alphafold3.md  ansys.md  cdtools.md  cdtoolssrc.md  configurestrings.sh  gaussian.md  gaussiansrc.md  gromacs.md  gromacssrc.md  idev.md  irods.md  lammps.md  lammpssrc.md  launcher.md  makefile  matlab.md  namd.md  tau.md  (+10 more)
tacc_docs/: __init__.py
(+297 files in other folders)
