[tool.poetry]
name = "tacc-docs"
version = "0.1.0"
description = ""
authors = ["rstijerina <r.sal.tijerina@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-macros-plugin = "^0.7.0"
pymdown-extensions = "^9.10"
mkdocs-exclude-search = "^0.6.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
